crates/orator-axum-codegen/tests/snapshots/codegen_axum__api_builder_two_tags.snap
---
source: crates/orator-axum-codegen/tests/codegen_axum.rs
assertion_line: 161
expression: code
---
#![allow(dead_code, unused_imports)]
impl orator_axum::axum::response::IntoResponse for super::operations::ListItemsResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Ok => orator_axum::http::StatusCode::OK.into_response(),
        }
    }
}
async fn handle_list_items<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
) -> Result<super::operations::ListItemsResponse, T::Error>
where
    T: super::operations::ItemsApi,
{
    api.list_items(ctx).await
}
impl orator_axum::axum::response::IntoResponse
for super::operations::CreateItemResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Created => orator_axum::http::StatusCode::CREATED.into_response(),
        }
    }
}
async fn handle_create_item<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
) -> Result<super::operations::CreateItemResponse, T::Error>
where
    T: super::operations::ItemsApi,
{
    api.create_item(ctx).await
}
pub fn items_router<T>(api: std::sync::Arc<T>) -> orator_axum::axum::Router
where
    T: super::operations::ItemsApi,
    T::Error: orator_axum::axum::response::IntoResponse,
    T::RequestContext: orator_axum::axum::extract::FromRequestParts<std::sync::Arc<T>>
        + Send + 'static,
{
    orator_axum::axum::Router::new()
        .route(
            "/items",
            orator_axum::axum::routing::get(handle_list_items::<T>)
                .post(handle_create_item::<T>),
        )
        .with_state(api)
}
impl orator_axum::axum::response::IntoResponse for super::operations::ListUsersResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Ok => orator_axum::http::StatusCode::OK.into_response(),
        }
    }
}
async fn handle_list_users<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
) -> Result<super::operations::ListUsersResponse, T::Error>
where
    T: super::operations::UsersApi,
{
    api.list_users(ctx).await
}
pub fn users_router<T>(api: std::sync::Arc<T>) -> orator_axum::axum::Router
where
    T: super::operations::UsersApi,
    T::Error: orator_axum::axum::response::IntoResponse,
    T::RequestContext: orator_axum::axum::extract::FromRequestParts<std::sync::Arc<T>>
        + Send + 'static,
{
    orator_axum::axum::Router::new()
        .route("/users", orator_axum::axum::routing::get(handle_list_users::<T>))
        .with_state(api)
}
pub struct Missing;
pub struct Registered;
pub struct ItemsRouter(orator_axum::axum::Router);
impl ItemsRouter {
    pub fn new<T>(api: std::sync::Arc<T>) -> Self
    where
        T: super::operations::ItemsApi,
        T::Error: orator_axum::axum::response::IntoResponse,
        T::RequestContext: orator_axum::axum::extract::FromRequestParts<
                std::sync::Arc<T>,
            > + Send + 'static,
    {
        Self(items_router(api))
    }
    pub fn layer<L>(self, layer: L) -> Self
    where
        L: orator_axum::tower::Layer<orator_axum::axum::routing::Route> + Clone + Send
            + Sync + 'static,
        L::Service: orator_axum::tower::Service<
                orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
            > + Clone + Send + Sync + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Response: orator_axum::axum::response::IntoResponse + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Error: Into<std::convert::Infallible> + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Future: Send + 'static,
    {
        Self(self.0.layer(layer))
    }
}
pub struct UsersRouter(orator_axum::axum::Router);
impl UsersRouter {
    pub fn new<T>(api: std::sync::Arc<T>) -> Self
    where
        T: super::operations::UsersApi,
        T::Error: orator_axum::axum::response::IntoResponse,
        T::RequestContext: orator_axum::axum::extract::FromRequestParts<
                std::sync::Arc<T>,
            > + Send + 'static,
    {
        Self(users_router(api))
    }
    pub fn layer<L>(self, layer: L) -> Self
    where
        L: orator_axum::tower::Layer<orator_axum::axum::routing::Route> + Clone + Send
            + Sync + 'static,
        L::Service: orator_axum::tower::Service<
                orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
            > + Clone + Send + Sync + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Response: orator_axum::axum::response::IntoResponse + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Error: Into<std::convert::Infallible> + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Future: Send + 'static,
    {
        Self(self.0.layer(layer))
    }
}
pub struct ApiBuilder<ItemsState = Missing, UsersState = Missing> {
    router: orator_axum::axum::Router,
    _phantom: std::marker::PhantomData<(ItemsState, UsersState)>,
}
impl ApiBuilder {
    pub fn new() -> Self {
        Self {
            router: orator_axum::axum::Router::new(),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl Default for ApiBuilder {
    fn default() -> Self {
        Self::new()
    }
}
impl<UsersState> ApiBuilder<Missing, UsersState> {
    pub fn items(self, router: ItemsRouter) -> ApiBuilder<Registered, UsersState> {
        ApiBuilder {
            router: self.router.merge(router.0),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl<ItemsState> ApiBuilder<ItemsState, Missing> {
    pub fn users(self, router: UsersRouter) -> ApiBuilder<ItemsState, Registered> {
        ApiBuilder {
            router: self.router.merge(router.0),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl ApiBuilder<Registered, Registered> {
    pub fn build(self) -> orator_axum::axum::Router {
        self.router
    }
}
